Disable model weight download if cache/huggingface directory exists

--- a/docker/env.example
+++ b/docker/env.example
@@ -19,6 +19,7 @@ VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
 VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192 --gpu-memory-utilization=0.85"
 # If model is gated on HF:
 # HF_TOKEN=hf_xx
+#TRANSFORMERS_OFFLINE=1
 
 # ---- RAG settings ----
 MAX_CONTEXT=8192
