--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -18,6 +18,7 @@ export MAX_CONTEXT=8192
 # If model is gated on HF:
 export HF_TOKEN="hf_xxx"
 export HF_HOME="/root/.cache/huggingface"
+#export TRANSFORMERS_OFFLINE=1
 
 # Recommended on T4/V100 and for mistral tokenizer
 export DOCS_DIR=./docs
