--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -345,10 +345,17 @@ jobs:
         label: SLURM Directives
         hidden: ${{ inputs.execmethod != 'SLURM' }}
         items:
-          account:
+          account_:
             label: SLURM account
             type: slurm-accounts
             resource: ${{ inputs.resource }}
+            tooltip: Account to submit the interactive job
+            ignore: true
+            hidden: true
+            optional: ${{ .ignore }}
+          account:
+            label: SLURM account
+            type: string
             tooltip: Account to submit the interactive job
             ignore: ${{ inputs.execmethod != 'SLURM' }}
             optional: ${{ .ignore }}
