--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -15,6 +15,9 @@ jobs:
           mkdir -p $(dirname ${{ inputs.rundir }})
           git clone -b alvaro/v2-onprem https://github.com/parallelworks/activate-rag-vllm.git ${{ inputs.rundir }}
           cd ${{ inputs.rundir }}
+          # FIXME: REMOVE BEFORE MERGING
+          git checkout alvaro/v2-onprem
+          git branch --set-upstream-to=origin/alvaro/v2-onprem
           git pull
           rm -f jobid PROXY_PORT job.started job.ended
           rm -rf logs
@@ -34,6 +37,7 @@ jobs:
         if: ${{ inputs.runmode == 'singularity' }}
         early-cancel: any-job-failed
         run: |
+          set -x
           # Check if singularity-compose is installed globally
           if ! command -v singularity-compose &> /dev/null; then
               # Check if virtual environment exists and activate it
@@ -174,6 +178,7 @@ jobs:
           cd ${{ inputs.rundir }}
           bash ./run.sh
           touch job.ended
+          rm -f jobid PROXY_PORT job.started
         cleanup: |
           set -x
           cd ${{ inputs.rundir }}
