--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -304,7 +304,7 @@ jobs:
         label: Execution Mode
         type: dropdown
         default: singularity
-        hidden: true
+        hidden: ${{ 'existing' == inputs.resource.provider }}
         options:
           - value: docker
             label: Docker
