--- a/workflow-vllm.yaml
+++ b/workflow-vllm.yaml
@@ -260,6 +260,11 @@ jobs:
         optional: true
         default: ${{ org.HF_TOKEN }}
         type: password
+      apikey:
+        label: vLLM API Key
+        optional: true
+        tooltip: Required for integration with Cline and other code assist tools.
+        type: password
       slurm:
         type: group
         label: SLURM Directives
