Adding support for adjustable max model len

--- a/workflow-vllm.yaml
+++ b/workflow-vllm.yaml
@@ -27,6 +27,7 @@ jobs:
           echo "export HF_TOKEN=${{ inputs.hftoken  }}" >> .run.env
           echo "export MODEL_NAME=${{ inputs.hfmodel  }}" >> .run.env
           echo "export API_KEY=${{ inputs.apikey  }}" >> .run.env
+          echo "export MAX_MODEL_LEN=${{ inputs.maxmodellen  }}" >> .run.env
 
   slurm_job:
     needs:
@@ -256,6 +257,10 @@ jobs:
         label: HF Model
         default: meta-llama/Llama-3.1-8B-Instruct
         type: string
+      maxmodellen:
+        label: Max Model Length
+        default: 8192
+        type: number
       hftoken:
         label: HF Token (gated models)
         optional: true
