Prevent emed from loading local libraries

--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -12,6 +12,7 @@ export RAG_URL="http://127.0.0.1:$RAG_PORT"
 export VLLM_URL="http://127.0.0.1:$VLLM_SERVER_PORT/v1"
 
 # ---- Model & vLLM ----
+export PYTHONNOUSERSITE=1
 export MODEL_NAME="meta-llama/Llama-3.1-8B-Instruct"
 export MAX_CONTEXT=8192
 
