--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -22,7 +22,7 @@ export HF_HOME="/root/.cache/huggingface"
 # Recommended on T4/V100 and for mistral tokenizer
 export DOCS_DIR=./docs
 export VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
-export VLLM_EXTRA_ARGS="--dtype float16 --max-model-len $MAX_CONTEXT --gpu-memory-utilization=0.85"
+export VLLM_EXTRA_ARGS="--dtype float16 --max-model-len $MAX_CONTEXT --gpu-memory-utilization=0.85 --trust_remote_code=True"
 
 # Other VLLM tuning settings
 export VLLM_LOGGING_LEVEL=INFO
