Adding trust of remote codes arg

--- a/docker/env.example
+++ b/docker/env.example
@@ -16,7 +16,7 @@ MODEL_NAME=meta-llama/Llama-3.1-8B-Instruct
 DOCS_DIR=./docs
 # Recommended on T4/V100 and for mistral tokenizer
 VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
-VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192 --gpu-memory-utilization=0.85 --trust_remote_code=True"
+VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192 --gpu-memory-utilization=0.85 --trust_remote_code"
 # If model is gated on HF:
 # HF_TOKEN=hf_xx
 
