--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -59,6 +59,7 @@ jobs:
           echo "export RUNTYPE=${{ inputs.runtype  }}" >> .run.env
           echo "export SYSTEM_PROMPT=\"${{ inputs.systemprompt }}\"" >> .run.env
           echo "export HF_TOKEN=${{ inputs.hftoken  }}" >> .run.env
+          echo "export API_KEY=${{ inputs.apikey  }}" >> .run.env
           echo "export MODEL_NAME=${{ inputs.hfmodel  }}" >> .run.env
           echo "export DOCS_DIR=${{ inputs.docsdir }}" >> .run.env
 
@@ -338,6 +339,11 @@ jobs:
         label: HF Token (gated models)
         optional: true
         default: ${{ org.HF_TOKEN }}
+        type: password
+      apikey:
+        label: vLLM API Key
+        optional: true
+        tooltip: Required for integration with Cline and other code assist tools.
         type: password
       docsdir:
         label: RAG Directory
