--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -31,6 +31,7 @@ jobs:
           echo "export SYSTEM_PROMPT=\"${{ inputs.systemprompt }}\"" >> .run.env
           echo "export HF_TOKEN=${{ inputs.hftoken  }}" >> .run.env
           echo "export MODEL_NAME=${{ inputs.hfmodel  }}" >> .run.env
+          echo "export API_KEY=${{ inputs.apikey  }}" >> .run.env
           echo "export DOCS_DIR=${{ inputs.docsdir }}" >> .run.env
       - name: Install Singularity Compose
         if: ${{ inputs.runmode == 'singularity' }}
@@ -337,6 +338,11 @@ jobs:
         label: HF Token (gated models)
         optional: true
         default: ${{ org.HF_TOKEN }}
+        type: password
+      apikey:
+        label: vLLM API Key
+        optional: true
+        tooltip: Required for integration with Cline and other code assist tools.
         type: password
       docsdir:
         label: RAG Directory
