--- a/workflow-vllm.yaml
+++ b/workflow-vllm.yaml
@@ -86,7 +86,7 @@ jobs:
           fi
 
           # Indicates job started running
-          touch job.started >> run.sh
+          echo "touch job.started" >> run.sh
           
           cat start_service.sh >> run.sh
       - name: Submit SLURM Script
@@ -159,7 +159,7 @@ jobs:
           chmod +x run.sh
 
           # Indicates job started running
-          touch job.started >> run.sh
+          echo "touch job.started" >> run.sh
 
           cat start_service.sh >> run.sh
       - name: Submit SSH Script
