--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -91,7 +91,7 @@ jobs:
           
 
           # Indicates job started running
-          touch job.started >> run.sh
+          echo "touch job.started" >> run.sh
 
           echo "module load singularity" >> run.sh
           
@@ -166,7 +166,7 @@ jobs:
           chmod +x run.sh
 
           # Indicates job started running
-          touch job.started >> run.sh
+          echo "touch job.started" >> run.sh
 
           cat start_service.sh >> run.sh
       - name: Submit SSH Script
