--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -96,7 +96,7 @@ jobs:
           
 
           # Indicates job started running
-          touch job.started >> run.sh
+          echo "touch job.started" >> run.sh
                     
           cat start_service.sh >> run.sh
       - name: Submit SLURM Script
@@ -170,7 +170,7 @@ jobs:
           chmod +x run.sh
 
           # Indicates job started running
-          touch job.started >> run.sh
+          echo "touch job.started" >> run.sh
 
           cat start_service.sh >> run.sh
       - name: Submit SSH Script
