--- a/workflow.yaml
+++ b/workflow.yaml
@@ -201,7 +201,7 @@ jobs:
           elif [[ ${{ inputs.execmethod }} == "SSH" ]]; then
             echo "target_hostname=$(hostname)" | tee -a $OUTPUTS
           fi
-      - name: Get Proxy Port
+      - name: Get Session Port
         early-cancel: any-job-failed
         run: |
           set -euo pipefail
@@ -213,17 +213,17 @@ jobs:
 
           attempt=1
           while true; do
-              echo "$(date) Attempt $attempt: Checking for PROXY_PORT file..."
+              echo "$(date) Attempt $attempt: Checking for SESSION_PORT file..."
 
-              if [ -f PROXY_PORT ]; then
-                  echo "$(date) Success: PROXY_PORT file found!"
-                  cat PROXY_PORT | tee -a "$OUTPUTS"
+              if [ -f SESSION_PORT ]; then
+                  echo "$(date) Success: SESSION_PORT file found!"
+                  cat SESSION_PORT | tee -a "$OUTPUTS"
                   exit 0
               elif [ -f job.ended ]; then
-                  echo "$(date) Job was completed but PROXY_PORT was never created. Exiting..."
+                  echo "$(date) Job was completed but SESSION_PORT was never created. Exiting..."
                   exit 1
               else
-                  echo "$(date) PROXY_PORT not found. Retrying in ${RETRY_INTERVAL} seconds..."
+                  echo "$(date) SESSION_PORT not found. Retrying in ${RETRY_INTERVAL} seconds..."
                   sleep "$RETRY_INTERVAL"
                   ((attempt++))
               fi
@@ -234,7 +234,7 @@ jobs:
           TIMEOUT=5
           RETRY_INTERVAL=3
           remote_host="${{ needs.create_session.outputs.target_hostname }}"
-          remote_port="${{ needs.create_session.outputs.PROXY_PORT }}"
+          remote_port="${{ needs.create_session.outputs.SESSION_PORT }}"
 
           # Function to check if server is listening
           check_server() {
@@ -264,7 +264,7 @@ jobs:
       - name: Update Session
         uses: parallelworks/update-session
         with:
-          remotePort: '${{ needs.create_session.outputs.PROXY_PORT }}'
+          remotePort: '${{ needs.create_session.outputs.SESSION_PORT }}'
           target: '${{ inputs.resource.id }}'
           name: '${{ sessions.session }}'
           remoteHost: '${{ needs.create_session.outputs.target_hostname }}'
