--- a/workflow.yaml
+++ b/workflow.yaml
@@ -16,7 +16,7 @@ jobs:
           git clone https://github.com/parallelworks/activate-rag-vllm.git ${{ inputs.rundir }}
           cd ${{ inputs.rundir }}
           git pull
-          rm -f jobid PROXY_PORT job.started job.ended run.out
+          rm -f jobid SESSION_PORT job.started job.ended run.out
           rm -rf logs
       - name: Create Environment File
         early-cancel: any-job-failed
