--- a/docker/env.example
+++ b/docker/env.example
@@ -16,7 +16,14 @@ MODEL_NAME=meta-llama/Llama-3.1-8B-Instruct
 DOCS_DIR=./docs
 # Recommended on T4/V100 and for mistral tokenizer
 VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
+VLLM_USE_FLASHINFER_SAMPLER=0
+
 VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192 --gpu-memory-utilization=0.95 --trust_remote_code"
+
+TOOL_PARSER="llama3_json"
+CHAT_TEMPLATE=${CHAT_TEMPLATE:-example/tool_chat_template_llama3.1_json.jinja}
+# --enable-auto-tool-choice --tool-call-parser $TOOL_PARSER --chat-template $CHAT_TEMPLATE
+
 # If model is gated on HF:
 # HF_TOKEN=hf_xx
 #TRANSFORMERS_OFFLINE=1
