--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -33,6 +33,7 @@ jobs:
           echo "export MODEL_NAME=${{ inputs.hfmodel  }}" >> .run.env
           echo "export API_KEY=${{ inputs.apikey  }}" >> .run.env
           echo "export DOCS_DIR=${{ inputs.docsdir }}" >> .run.env
+          echo "export MAX_MODEL_LEN=${{ inputs.maxmodellen  }}" >> .run.env
       - name: Install Singularity Compose
         if: ${{ inputs.runmode == 'singularity' }}
         early-cancel: any-job-failed
@@ -335,6 +336,10 @@ jobs:
         label: HF Model
         default: meta-llama/Llama-3.1-8B-Instruct
         type: string
+      maxmodellen:
+        label: Max Model Length
+        default: 16000
+        type: number
       hftoken:
         label: HF Token (gated models)
         optional: true
@@ -449,3 +454,4 @@ jobs:
             type: string
             label: Repository Branch
             default: main
+            
