--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -18,7 +18,7 @@ jobs:
           git checkout ${{ inputs.advanced_settings.repository_branch }}
           git branch --set-upstream-to=origin/${{ inputs.advanced_settings.repository_branch }}
           git pull
-          rm -f jobid PROXY_PORT job.started job.ended run.out
+          rm -f jobid SESSION_PORT job.started job.ended run.out
           rm -rf logs
       - name: Install Singularity Compose
         if: ${{ inputs.runmode == 'singularity' }}
@@ -115,7 +115,7 @@ jobs:
           target_hostname=$(squeue -j "${jobid}" --noheader --format="%N")
           ssh ${target_hostname} bash cancel.sh
           scancel ${jobid}
-          rm -f jobid PROXY_PORT job.started
+          rm -f jobid SESSION_PORT job.started
       - name: Monitor SLURM Job
         run: |
           #jobid=${{ needs.slurm_job.outputs.jobid }}
@@ -177,7 +177,7 @@ jobs:
           cd ${{ inputs.rundir }}
           bash ./run.sh
           touch job.ended
-          rm -f jobid PROXY_PORT job.started
+          rm -f jobid SESSION_PORT job.started
         cleanup: |
           set -x
           cd ${{ inputs.rundir }}
@@ -232,17 +232,17 @@ jobs:
 
           attempt=1
           while true; do
-              echo "$(date) Attempt $attempt: Checking for PROXY_PORT file..."
+              echo "$(date) Attempt $attempt: Checking for SESSION_PORT file..."
 
-              if [ -f PROXY_PORT ]; then
-                  echo "$(date) Success: PROXY_PORT file found!"
-                  cat PROXY_PORT | tee -a "$OUTPUTS"
+              if [ -f SESSION_PORT ]; then
+                  echo "$(date) Success: SESSION_PORT file found!"
+                  cat SESSION_PORT | tee -a "$OUTPUTS"
                   exit 0
               elif [ -f job.ended ]; then
-                  echo "$(date) Job was completed but PROXY_PORT was never created. Exiting..."
+                  echo "$(date) Job was completed but SESSION_PORT was never created. Exiting..."
                   exit 1
               else
-                  echo "$(date) PROXY_PORT not found. Retrying in ${RETRY_INTERVAL} seconds..."
+                  echo "$(date) SESSION_PORT not found. Retrying in ${RETRY_INTERVAL} seconds..."
                   sleep "$RETRY_INTERVAL"
                   ((attempt++))
               fi
@@ -253,7 +253,7 @@ jobs:
           TIMEOUT=5
           RETRY_INTERVAL=3
           remote_host="${{ needs.create_session.outputs.target_hostname }}"
-          remote_port="${{ needs.create_session.outputs.PROXY_PORT }}"
+          remote_port="${{ needs.create_session.outputs.SESSION_PORT }}"
 
           # Function to check if server is listening
           check_server() {
@@ -283,7 +283,7 @@ jobs:
       - name: Update Session
         uses: parallelworks/update-session
         with:
-          remotePort: '${{ needs.create_session.outputs.PROXY_PORT }}'
+          remotePort: '${{ needs.create_session.outputs.SESSION_PORT }}'
           target: '${{ inputs.resource.id }}'
           name: '${{ sessions.session }}'
           remoteHost: '${{ needs.create_session.outputs.target_hostname }}'
