--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -120,7 +120,19 @@ jobs:
       - name: Monitor SLURM Job
         run: |
           #jobid=${{ needs.slurm_job.outputs.jobid }}
-          source jobid
+          max_retries=10
+          count=0
+
+          while [ $count -lt $max_retries ]; do
+            source jobid
+            if [ -z "${jobid}" ]; then
+              echo "$(date) Job ID is empty. Retry $((count+1))/$max_retries"
+              count=$((count+1))
+              sleep 5
+            else
+              break
+            fi
+          done
           echo "$(date) Monitoring SLURM job ${jobid}"
 
           cd ${{ inputs.rundir }}
