Expose all the vllm extra args

--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -24,7 +24,7 @@ export HF_HOME="/root/.cache/huggingface"
 # Recommended on T4/V100 and for mistral tokenizer
 export DOCS_DIR=./docs
 export VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
-export VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192 --gpu-memory-utilization=0.95 --max-num-seqs 1 --trust_remote_code "
+export VLLM_EXTRA_ARGS="__VLLM_EXTRA_ARGS__"
 
 
 # Other VLLM tuning settings
