--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -358,6 +358,7 @@ jobs:
       vllm_extra_args:
         label: VLLM Extra Args
         default: "--dtype float16 --max-model-len 8192 --gpu-memory-utilization=0.95 --max-num-seqs 1 --trust_remote_code"
+        placeholder: "--dtype float16 --max-model-len 8192 --gpu-memory-utilization=0.95 --max-num-seqs 1 --trust_remote_code"
         type: string
       hftoken:
         label: HF Token (gated models)
