--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -33,7 +33,7 @@ jobs:
           echo "export MODEL_NAME=${{ inputs.hfmodel  }}" >> .run.env
           echo "export API_KEY=${{ inputs.apikey  }}" >> .run.env
           echo "export DOCS_DIR=${{ inputs.docsdir }}" >> .run.env
-          echo "export MAX_MODEL_LEN=${{ inputs.maxmodellen  }}" >> .run.env
+          echo "export VLLM_EXTRA_ARGS=\"${{ inputs.vllm_extra_args }}\"" >> .run.env
       - name: Install Singularity Compose
         if: ${{ inputs.runmode == 'singularity' }}
         early-cancel: any-job-failed
@@ -338,10 +338,11 @@ jobs:
         label: HF Model
         default: meta-llama/Llama-3.1-8B-Instruct
         type: string
-      maxmodellen:
-        label: Max Model Length
-        default: 16000
-        type: number
+      vllm_extra_args:
+        label: VLLM Extra Args
+        default: "--dtype float16 --max-model-len 16384 --gpu-memory-utilization=0.95 --trust_remote_code"
+        placeholder: "--dtype float16 --max-model-len 16384 --gpu-memory-utilization=0.95 --max-num-seqs 1 --trust_remote_code"
+        type: string
       hftoken:
         label: HF Token (gated models)
         optional: true
