--- a/workflow-vllm.yaml
+++ b/workflow-vllm.yaml
@@ -144,6 +144,7 @@ jobs:
   create_session:
     needs:
       - prepare_job_directory
+      - slurm_job
     ssh:
       remoteHost: ${{ inputs.resource.ip }}
     steps:
