Fixing the vLLM workflow

--- a/docker/env.example
+++ b/docker/env.example
@@ -14,9 +14,6 @@ VLLM_URL="http://vllm:$VLLM_SERVER_PORT/v1"
 # ---- Model & vLLM ----
 MODEL_NAME=meta-llama/Llama-3.1-8B-Instruct
 DOCS_DIR=./docs
-# Recommended on T4/V100 and for mistral tokenizer
-VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
-VLLM_USE_FLASHINFER_SAMPLER=0
 
 VLLM_EXTRA_ARGS="__VLLM_EXTRA_ARGS__"
 
@@ -24,9 +21,13 @@ TOOL_PARSER="llama3_json"
 CHAT_TEMPLATE=${CHAT_TEMPLATE:-example/tool_chat_template_llama3.1_json.jinja}
 # --enable-auto-tool-choice --tool-call-parser $TOOL_PARSER --chat-template $CHAT_TEMPLATE
 
+# Recommended on T4/V100 and for mistral tokenizer
+# VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
+# VLLM_USE_FLASHINFER_SAMPLER=0
+
 # If model is gated on HF:
 # HF_TOKEN=hf_xx
-#TRANSFORMERS_OFFLINE=1
+# TRANSFORMERS_OFFLINE=1
 
 # ---- RAG settings ----
 MAX_CONTEXT=8192
