--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -553,7 +553,7 @@ jobs:
             default: |
               #!/bin/bash
               #PBS -q HIE
-              #PBS -l select=1:ncpus=92s:mpiprocs=1:ngpus=1
+              #PBS -l select=1:ncpus=92:mpiprocs=1:ngpus=1
               #PBS -l walltime=01:00:00
               #PBS -V
       advanced_settings:
