Explicitly set TRITON_CC=gcc

--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -25,6 +25,7 @@ export HF_HOME="/root/.cache/huggingface"
 export DOCS_DIR=./docs
 export VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
 export VLLM_EXTRA_ARGS="__VLLM_EXTRA_ARGS__"
+export TRITON_CC=gcc
 
 
 # Other VLLM tuning settings
