--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -560,4 +560,4 @@ jobs:
           repository_branch:
             type: string
             label: Repository Branch
-            default: main
+            default: nemotron
